[gd_scene load_steps=6 format=3 uid="uid://bpvf71swaq767"]

[ext_resource type="Script" path="res://Main.gd" id="1_aaqny"]
[ext_resource type="PackedScene" uid="uid://cjs4o4gakesi0" path="res://Elevator.tscn" id="2_d503y"]
[ext_resource type="Theme" uid="uid://du267sh1n7583" path="res://Art/HighlightedButton.tres" id="3_ink5q"]
[ext_resource type="Theme" uid="uid://cpu5xklwedlnj" path="res://Art/Green_Theme.tres" id="4_wxtmq"]
[ext_resource type="Theme" uid="uid://djcwrsdej6hjr" path="res://Art/Red_Theme.tres" id="5_ddiph"]

[node name="Main" type="Node2D"]
script = ExtResource("1_aaqny")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Floor12" type="Button" parent="."]
offset_top = 30.0
offset_right = 40.0
offset_bottom = 85.0
text = "L12"

[node name="Floor11" type="Button" parent="."]
offset_top = 85.0
offset_right = 40.0
offset_bottom = 140.0
text = "L11"

[node name="Floor10" type="Button" parent="."]
offset_top = 140.0
offset_right = 40.0
offset_bottom = 195.0
text = "L10"

[node name="Floor9" type="Button" parent="."]
offset_top = 195.0
offset_right = 40.0
offset_bottom = 250.0
text = "L9"

[node name="Floor8" type="Button" parent="."]
offset_top = 250.0
offset_right = 40.0
offset_bottom = 305.0
text = "L8
"

[node name="Floor7" type="Button" parent="."]
offset_top = 305.0
offset_right = 40.0
offset_bottom = 360.0
text = "L7"

[node name="Floor6" type="Button" parent="."]
offset_top = 360.0
offset_right = 40.0
offset_bottom = 415.0
text = "L6
"

[node name="Floor5" type="Button" parent="."]
offset_top = 415.0
offset_right = 40.0
offset_bottom = 470.0
text = "L5"

[node name="Floor4" type="Button" parent="."]
offset_top = 470.0
offset_right = 40.0
offset_bottom = 525.0
text = "L4"

[node name="Floor3" type="Button" parent="."]
offset_top = 525.0
offset_right = 40.0
offset_bottom = 580.0
text = "L3"

[node name="Floor2" type="Button" parent="."]
offset_top = 580.0
offset_right = 40.0
offset_bottom = 635.0
text = "L2"

[node name="Floor1" type="Button" parent="."]
offset_top = 635.0
offset_right = 40.0
offset_bottom = 690.0
toggle_mode = true
text = "L1
"

[node name="B1" type="Button" parent="."]
offset_top = 690.0
offset_right = 40.0
offset_bottom = 745.0
text = "B1
"

[node name="B2" type="Button" parent="."]
offset_top = 745.0
offset_right = 40.0
offset_bottom = 800.0
size_flags_horizontal = 0
text = "B2
"

[node name="PositionMarker12" type="Marker2D" parent="."]
position = Vector2(60, 59)

[node name="PositionMarker11" type="Marker2D" parent="."]
position = Vector2(60, 114)

[node name="PositionMarker10" type="Marker2D" parent="."]
position = Vector2(60, 169)

[node name="PositionMarker9" type="Marker2D" parent="."]
position = Vector2(60, 224)

[node name="PositionMarker8" type="Marker2D" parent="."]
position = Vector2(60, 279)

[node name="PositionMarker7" type="Marker2D" parent="."]
position = Vector2(60, 334)

[node name="PositionMarker6" type="Marker2D" parent="."]
position = Vector2(60, 389)

[node name="PositionMarker5" type="Marker2D" parent="."]
position = Vector2(60, 444)

[node name="PositionMarker4" type="Marker2D" parent="."]
position = Vector2(60, 499)

[node name="PositionMarker3" type="Marker2D" parent="."]
position = Vector2(60, 554)

[node name="PositionMarker2" type="Marker2D" parent="."]
position = Vector2(60, 609)

[node name="PositionMarker1" type="Marker2D" parent="."]
position = Vector2(60, 664)

[node name="PositionMarkerB1" type="Marker2D" parent="."]
position = Vector2(60, 719)

[node name="PositionMarkerB2" type="Marker2D" parent="."]
position = Vector2(60, 776)

[node name="Elevator" parent="." instance=ExtResource("2_d503y")]
position = Vector2(64, 770)

[node name="Up1" type="Button" parent="."]
offset_left = 160.0
offset_top = 636.0
offset_right = 190.0
offset_bottom = 667.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Up"

[node name="UpB1" type="Button" parent="."]
offset_left = 160.0
offset_top = 691.0
offset_right = 190.0
offset_bottom = 722.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Up"

[node name="UpB2" type="Button" parent="."]
offset_left = 160.0
offset_top = 745.0
offset_right = 190.0
offset_bottom = 776.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Up"

[node name="Down1" type="Button" parent="."]
offset_left = 106.0
offset_top = 637.0
offset_right = 159.0
offset_bottom = 668.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Down"

[node name="DownB1" type="Button" parent="."]
offset_left = 106.0
offset_top = 691.0
offset_right = 159.0
offset_bottom = 722.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Down"

[node name="Up2" type="Button" parent="."]
offset_left = 161.0
offset_top = 580.0
offset_right = 191.0
offset_bottom = 611.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Up"

[node name="Down2" type="Button" parent="."]
offset_left = 106.0
offset_top = 581.0
offset_right = 159.0
offset_bottom = 612.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Down"

[node name="Up3" type="Button" parent="."]
offset_left = 161.0
offset_top = 525.0
offset_right = 191.0
offset_bottom = 556.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Up"

[node name="Down3" type="Button" parent="."]
offset_left = 104.0
offset_top = 526.0
offset_right = 157.0
offset_bottom = 557.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Down
"

[node name="Up4" type="Button" parent="."]
offset_left = 162.0
offset_top = 469.0
offset_right = 192.0
offset_bottom = 500.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Up
"

[node name="Down4" type="Button" parent="."]
offset_left = 107.0
offset_top = 470.0
offset_right = 160.0
offset_bottom = 501.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Down"

[node name="Up5" type="Button" parent="."]
offset_left = 162.0
offset_top = 414.0
offset_right = 192.0
offset_bottom = 445.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Up"

[node name="Down5" type="Button" parent="."]
offset_left = 106.0
offset_top = 415.0
offset_right = 159.0
offset_bottom = 446.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Down"

[node name="Up6" type="Button" parent="."]
offset_left = 163.0
offset_top = 358.0
offset_right = 193.0
offset_bottom = 389.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Up"

[node name="Down6" type="Button" parent="."]
offset_left = 107.0
offset_top = 359.0
offset_right = 160.0
offset_bottom = 390.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Down"

[node name="Up7" type="Button" parent="."]
offset_left = 163.0
offset_top = 303.0
offset_right = 193.0
offset_bottom = 334.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Up"

[node name="Down7" type="Button" parent="."]
offset_left = 107.0
offset_top = 304.0
offset_right = 160.0
offset_bottom = 335.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Down"

[node name="Up8" type="Button" parent="."]
offset_left = 164.0
offset_top = 247.0
offset_right = 194.0
offset_bottom = 278.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Up"

[node name="Down8" type="Button" parent="."]
offset_left = 109.0
offset_top = 249.0
offset_right = 162.0
offset_bottom = 280.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Down"

[node name="Up9" type="Button" parent="."]
offset_left = 161.0
offset_top = 190.0
offset_right = 191.0
offset_bottom = 221.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Up
"

[node name="Down9" type="Button" parent="."]
offset_left = 104.0
offset_top = 190.0
offset_right = 157.0
offset_bottom = 221.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Down"

[node name="Up10" type="Button" parent="."]
offset_left = 160.0
offset_top = 139.0
offset_right = 190.0
offset_bottom = 170.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Up"

[node name="Down10" type="Button" parent="."]
offset_left = 104.0
offset_top = 139.0
offset_right = 157.0
offset_bottom = 170.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Down"

[node name="Up11" type="Button" parent="."]
offset_left = 158.0
offset_top = 83.0
offset_right = 188.0
offset_bottom = 114.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Up"

[node name="Down11" type="Button" parent="."]
offset_left = 102.0
offset_top = 83.0
offset_right = 155.0
offset_bottom = 114.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Down"

[node name="Down12" type="Button" parent="."]
offset_left = 102.0
offset_top = 47.0
offset_right = 155.0
offset_bottom = 78.0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "Down"

[node name="Elevator Panel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 832.0
offset_top = 192.0
offset_right = 1016.0
offset_bottom = 448.0

[node name="Panel" type="Panel" parent="Elevator Panel"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 256.0

[node name="B2" type="Button" parent="Elevator Panel/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -56.0
offset_right = -40.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "B2"

[node name="B1" type="Button" parent="Elevator Panel/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -56.0
offset_right = -80.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "B1
"

[node name="Hold" type="Button" parent="Elevator Panel/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -56.0
offset_right = -120.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("5_ddiph")
toggle_mode = true
text = "H
"

[node name="1" type="Button" parent="Elevator Panel/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -96.0
offset_right = -120.0
offset_bottom = -64.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "1
"

[node name="2" type="Button" parent="Elevator Panel/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -96.0
offset_right = -80.0
offset_bottom = -64.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "2"

[node name="3" type="Button" parent="Elevator Panel/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -96.0
offset_right = -40.0
offset_bottom = -64.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "3
"

[node name="4" type="Button" parent="Elevator Panel/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -136.0
offset_right = -120.0
offset_bottom = -104.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "4"

[node name="5" type="Button" parent="Elevator Panel/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -136.0
offset_right = -80.0
offset_bottom = -104.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "5
"

[node name="6" type="Button" parent="Elevator Panel/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -136.0
offset_right = -40.0
offset_bottom = -104.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "6
"

[node name="7" type="Button" parent="Elevator Panel/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -176.0
offset_right = -120.0
offset_bottom = -144.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "7
"

[node name="8" type="Button" parent="Elevator Panel/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -176.0
offset_right = -80.0
offset_bottom = -144.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "8
"

[node name="9" type="Button" parent="Elevator Panel/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -176.0
offset_right = -40.0
offset_bottom = -144.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "9"

[node name="10" type="Button" parent="Elevator Panel/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -216.0
offset_right = -120.0
offset_bottom = -184.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "10"

[node name="11" type="Button" parent="Elevator Panel/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -216.0
offset_right = -80.0
offset_bottom = -184.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "11"

[node name="12" type="Button" parent="Elevator Panel/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -216.0
offset_right = -40.0
offset_bottom = -184.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_ink5q")
toggle_mode = true
text = "12"

[node name="Current Floor" type="Label" parent="Elevator Panel/Panel"]
layout_mode = 0
offset_left = 80.0
offset_right = 112.0
offset_bottom = 23.0
text = "1"
horizontal_alignment = 1

[node name="Up Arrow" type="Button" parent="Elevator Panel/Panel"]
layout_mode = 0
offset_left = 48.0
offset_right = 72.0
offset_bottom = 31.0
theme = ExtResource("4_wxtmq")
toggle_mode = true
text = "↑"

[node name="Down Arrow" type="Button" parent="Elevator Panel/Panel"]
layout_mode = 0
offset_left = 120.0
offset_right = 144.0
offset_bottom = 31.0
theme = ExtResource("5_ddiph")
toggle_mode = true
text = "↓"

[connection signal="pressed" from="Floor12" to="." method="_on_floor_12_pressed"]
[connection signal="pressed" from="Floor11" to="." method="_on_floor_11_pressed"]
[connection signal="pressed" from="Floor10" to="." method="_on_floor_10_pressed"]
[connection signal="pressed" from="Floor9" to="." method="_on_floor_9_pressed"]
[connection signal="pressed" from="Floor8" to="." method="_on_floor_8_pressed"]
[connection signal="pressed" from="Floor7" to="." method="_on_floor_7_pressed"]
[connection signal="pressed" from="Floor6" to="." method="_on_floor_6_pressed"]
[connection signal="pressed" from="Floor5" to="." method="_on_floor_5_pressed"]
[connection signal="pressed" from="Floor4" to="." method="_on_floor_4_pressed"]
[connection signal="pressed" from="Floor3" to="." method="_on_floor_3_pressed"]
[connection signal="pressed" from="Floor2" to="." method="_on_floor_2_pressed"]
[connection signal="pressed" from="Floor1" to="." method="_on_floor_1_pressed"]
[connection signal="pressed" from="B2" to="." method="_on_b_2_pressed"]
[connection signal="pressed" from="Up1" to="." method="_on_up_1_pressed"]
[connection signal="pressed" from="UpB1" to="." method="_on_up_b_1_pressed"]
[connection signal="pressed" from="UpB2" to="." method="_on_up_b_2_pressed"]
[connection signal="pressed" from="Down1" to="." method="_on_down_1_pressed"]
[connection signal="pressed" from="DownB1" to="." method="_on_down_b_1_pressed"]
[connection signal="pressed" from="Up2" to="." method="_on_up_2_pressed"]
[connection signal="pressed" from="Down2" to="." method="_on_down_2_pressed"]
[connection signal="pressed" from="Up3" to="." method="_on_up_3_pressed"]
[connection signal="pressed" from="Down3" to="." method="_on_down_3_pressed"]
[connection signal="pressed" from="Up4" to="." method="_on_up_4_pressed"]
[connection signal="pressed" from="Down4" to="." method="_on_down_4_pressed"]
[connection signal="pressed" from="Up5" to="." method="_on_up_5_pressed"]
[connection signal="pressed" from="Down5" to="." method="_on_down_5_pressed"]
[connection signal="pressed" from="Up6" to="." method="_on_up_6_pressed"]
[connection signal="pressed" from="Down6" to="." method="_on_down_6_pressed"]
[connection signal="pressed" from="Up7" to="." method="_on_up_7_pressed"]
[connection signal="pressed" from="Down7" to="." method="_on_down_7_pressed"]
[connection signal="pressed" from="Up8" to="." method="_on_up_8_pressed"]
[connection signal="pressed" from="Down8" to="." method="_on_down_8_pressed"]
[connection signal="pressed" from="Up9" to="." method="_on_up_9_pressed"]
[connection signal="pressed" from="Down9" to="." method="_on_down_9_pressed"]
[connection signal="pressed" from="Up10" to="." method="_on_up_10_pressed"]
[connection signal="pressed" from="Down10" to="." method="_on_down_10_pressed"]
[connection signal="pressed" from="Up11" to="." method="_on_up_11_pressed"]
[connection signal="pressed" from="Down11" to="." method="_on_down_11_pressed"]
[connection signal="pressed" from="Down12" to="." method="_on_down_12_pressed"]
[connection signal="toggled" from="Elevator Panel/Panel/Hold" to="." method="_on_hold_toggled"]
